--- a/fay.cabal
+++ b/fay.cabal
@@ -23,6 +23,13 @@ copyright:           2012 Chris Done, Adam Bergmark
 category:            Development, Web, Fay
 build-type:          Custom
 cabal-version:       >=1.8
+tested-with:
+    GHC == 7.2.2
+  , GHC == 7.4.2
+  , GHC == 7.6.3
+  , GHC == 7.8.4
+  , GHC == 7.10.3
+  , GHC == 8.0.1
 data-files:
   js/runtime.js
   src/Fay/FFI.hs
