--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,7 @@ install:
 # Here starts the actual work to be performed for the package under test;
 # any command which exits with a non-zero exit code causes the build to fail.
 script:
+ - travis_retry cabal install 'cpphs >= 1.18.3' 'happy >= 1.19.5'
  - if [ -f configure.ac ]; then autoreconf -i; fi
  - cabal configure --enable-tests --enable-benchmarks -v2  # -v2 provides useful information for debugging
  - cabal install -ftest  # this builds all libraries and executables (including tests/benchmarks)
